@@ -1,24 +1,24 @@
 /*! ******************************************************************************
-*
-* Pentaho Data Integration
-*
-* Copyright (C) 2002-2013 by Pentaho : http://www.pentaho.com
-*
-*******************************************************************************
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with
-* the License. You may obtain a copy of the License at
-*
-*    http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*
-******************************************************************************/
+ *
+ * Pentaho Data Integration
+ *
+ * Copyright (C) 2002-2013 by Pentaho : http://www.pentaho.com
+ *
+ *******************************************************************************
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with
+ * the License. You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
+ ******************************************************************************/
 
 package org.pentaho.di.trans.steps.constant;
 
@@ -48,7 +48,6 @@ import org.pentaho.di.trans.step.StepInterface;
 import org.pentaho.di.trans.step.StepMeta;
 import org.pentaho.di.trans.steps.rowgenerator.RowGeneratorMeta;
 
-
 /**
  * Test class for the Constant step.
  * 
@@ -59,27 +58,27 @@ public class ConstantTest extends TestCase {
   public RowMetaInterface createResultRowMetaInterface() {
     RowMetaInterface rm = new RowMeta();
     try {
-      ValueMetaInterface[] valuesMeta = {
-        ValueMetaFactory.createValueMeta( "boolean1", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "boolean2", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "boolean3", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "boolean4", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "boolean5", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "boolean6", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "boolean7", ValueMetaInterface.TYPE_BOOLEAN ),
-        ValueMetaFactory.createValueMeta( "string1", ValueMetaInterface.TYPE_STRING ),
-        ValueMetaFactory.createValueMeta( "string2", ValueMetaInterface.TYPE_STRING ),
-        ValueMetaFactory.createValueMeta( "string3", ValueMetaInterface.TYPE_STRING ),
-        ValueMetaFactory.createValueMeta( "integer1", ValueMetaInterface.TYPE_INTEGER ),
-        ValueMetaFactory.createValueMeta( "integer2", ValueMetaInterface.TYPE_INTEGER ),
-        ValueMetaFactory.createValueMeta( "integer3", ValueMetaInterface.TYPE_INTEGER ),
-        ValueMetaFactory.createValueMeta( "integer4", ValueMetaInterface.TYPE_INTEGER ),
-        ValueMetaFactory.createValueMeta( "number1", ValueMetaInterface.TYPE_NUMBER ),
-        ValueMetaFactory.createValueMeta( "number2", ValueMetaInterface.TYPE_NUMBER ),
-        ValueMetaFactory.createValueMeta( "number3", ValueMetaInterface.TYPE_NUMBER ),
-        ValueMetaFactory.createValueMeta( "number4", ValueMetaInterface.TYPE_NUMBER ),
-        ValueMetaFactory.createValueMeta( "timestamp1", ValueMetaInterface.TYPE_TIMESTAMP )
-      };
+      ValueMetaInterface[] valuesMeta =
+          {
+              ValueMetaFactory.createValueMeta( "boolean1", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "boolean2", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "boolean3", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "boolean4", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "boolean5", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "boolean6", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "boolean7", ValueMetaInterface.TYPE_BOOLEAN ),
+              ValueMetaFactory.createValueMeta( "string1", ValueMetaInterface.TYPE_STRING ),
+              ValueMetaFactory.createValueMeta( "string2", ValueMetaInterface.TYPE_STRING ),
+              ValueMetaFactory.createValueMeta( "string3", ValueMetaInterface.TYPE_STRING ),
+              ValueMetaFactory.createValueMeta( "integer1", ValueMetaInterface.TYPE_INTEGER ),
+              ValueMetaFactory.createValueMeta( "integer2", ValueMetaInterface.TYPE_INTEGER ),
+              ValueMetaFactory.createValueMeta( "integer3", ValueMetaInterface.TYPE_INTEGER ),
+              ValueMetaFactory.createValueMeta( "integer4", ValueMetaInterface.TYPE_INTEGER ),
+              ValueMetaFactory.createValueMeta( "number1", ValueMetaInterface.TYPE_NUMBER ),
+              ValueMetaFactory.createValueMeta( "number2", ValueMetaInterface.TYPE_NUMBER ),
+              ValueMetaFactory.createValueMeta( "number3", ValueMetaInterface.TYPE_NUMBER ),
+              ValueMetaFactory.createValueMeta( "number4", ValueMetaInterface.TYPE_NUMBER ),
+              ValueMetaFactory.createValueMeta( "timestamp1", ValueMetaInterface.TYPE_TIMESTAMP ) };
       for ( int i = 0; i < valuesMeta.length; i++ ) {
         rm.addValueMeta( valuesMeta[i] );
       }
@@ -94,13 +93,12 @@ public class ConstantTest extends TestCase {
 
     RowMetaInterface rm = createResultRowMetaInterface();
 
-    Object[] r1  = new Object[] { Boolean.TRUE, Boolean.FALSE, Boolean.FALSE,
-      Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, null,
-      "AAAAAAAAAAAAAA", "   ", null,
-      Long.valueOf( -100L ), Long.valueOf( 0L ), Long.valueOf( 212L ), null,
-      new Double( -100.2 ), new Double( 0.0 ), new Double( 212.23 ), null,
-      Timestamp.valueOf( "1970-01-01 00:00:00.000" )
-    };
+    Object[] r1 =
+        new Object[] {
+            Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, null,
+            "AAAAAAAAAAAAAA", "   ", null, Long.valueOf( -100L ), Long.valueOf( 0L ), Long.valueOf( 212L ), null,
+            new Double( -100.2 ), new Double( 0.0 ), new Double( 212.23 ), null,
+            Timestamp.valueOf( "1970-01-01 00:00:00.000" ) };
 
     list.add( new RowMetaAndData( rm, r1 ) );
 
@@ -108,8 +106,7 @@ public class ConstantTest extends TestCase {
   }
 
   /**
-   *  Check the 2 lists comparing the rows in order.
-   *  If they are not the same fail the test. 
+   * Check the 2 lists comparing the rows in order. If they are not the same fail the test.
    */
   public void checkRows( List<RowMetaAndData> rows1, List<RowMetaAndData> rows2 ) {
     int idx = 1;
@@ -159,13 +156,13 @@ public class ConstantTest extends TestCase {
 
     PluginRegistry registry = PluginRegistry.getInstance();
 
-    // 
+    //
     // create a row generator step...
     //
     String rowGeneratorStepname = "row generator step";
     RowGeneratorMeta rm = new RowGeneratorMeta();
 
-    // Set the information of the row generator.                
+    // Set the information of the row generator.
     String rowGeneratorPid = registry.getPluginId( StepPluginType.class, rm );
     StepMeta rowGeneratorStep = new StepMeta( rowGeneratorPid, rowGeneratorStepname, rm );
     transMeta.addStep( rowGeneratorStep );
@@ -173,13 +170,13 @@ public class ConstantTest extends TestCase {
     //
     // Generate 1 empty row
     //
-    String[] fieldName = {  };
-    String[] type = {  };
-    String[] value = {  };
-    String[] fieldFormat = {  };
-    String[] group = {  };
-    String[] decimal = {  };
-    int[] intDummies = {  };
+    String[] fieldName = {};
+    String[] type = {};
+    String[] value = {};
+    String[] fieldFormat = {};
+    String[] group = {};
+    String[] decimal = {};
+    int[] intDummies = {};
 
     rm.setDefault();
     rm.setFieldName( fieldName );
@@ -192,77 +189,35 @@ public class ConstantTest extends TestCase {
     rm.setGroup( group );
     rm.setDecimal( decimal );
 
-    // 
+    //
     // Add constant step.
     //
     String constStepname1 = "constant 1";
     ConstantMeta cnst1 = new ConstantMeta();
 
-    String[] fieldName1 = {
-      "boolean1",
-      "boolean2",
-      "boolean3",
-      "boolean4",
-      "boolean5",
-      "boolean6",
-      "boolean7",
-      "string1",
-      "string2",
-      "string3",
-      "integer1",
-      "integer2",
-      "integer3",
-      "integer4",
-      "number1",
-      "number2",
-      "number3",
-      "number4",
-      "timestamp1"
-    };
-    String[] type1 = {
-      "boolean",
-      "Boolean",
-      "bOOLEAN",
-      "BOOLEAN",
-      "boolean",
-      "boolean",
-      "boolean",
-      "string",
-      "string",
-      "String",
-      "integer",
-      "integer",
-      "integer",
-      "integer",
-      "number",
-      "number",
-      "number",
-      "number",
-      "timestamp"
-    };
-    String[] value1 = {
-      "Y",
-      "T",
-      "a",
-      "TRUE",
-      "0",
-      "9",
-      "",
-      "AAAAAAAAAAAAAA",
-      "   ",
-      "",
-      "-100", "0", "212", "",
-      "-100.2", "0.0", "212.23", "",
-      "1970-01-01 00:00:00.000"
-    };
-    String[] fieldFormat1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""};
-    String[] group1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", ",", ",", ",", ",", ""};
-    String[] decimal1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", ".", ".", ".", ".", ""};
-    String[] currency = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""};
-    int[] intDummies1 = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
+    String[] fieldName1 =
+        {
+            "boolean1", "boolean2", "boolean3", "boolean4", "boolean5", "boolean6", "boolean7", "string1", "string2",
+            "string3", "integer1", "integer2", "integer3", "integer4", "number1", "number2", "number3", "number4",
+            "timestamp1" };
+    String[] type1 =
+        {
+            "boolean", "Boolean", "bOOLEAN", "BOOLEAN", "boolean", "boolean", "boolean", "string", "string", "String",
+            "integer", "integer", "integer", "integer", "number", "number", "number", "number", "timestamp" };
+    String[] value1 =
+        {
+            "Y", "T", "a", "TRUE", "0", "9", "", "AAAAAAAAAAAAAA", "   ", "", "-100", "0", "212", "", "-100.2", "0.0",
+            "212.23", "", "1970-01-01 00:00:00.000" };
+    String[] fieldFormat1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" };
+    String[] group1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", ",", ",", ",", ",", "" };
+    String[] decimal1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", ".", ".", ".", ".", "" };
+    String[] currency = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" };
+    int[] intDummies1 = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 };
 
-    boolean[] setEmptystring = { false, false, false, false, false, false, false, false, false, false,
-      false, false, false, false, false, false, false, false, false};
+    boolean[] setEmptystring =
+        {
+            false, false, false, false, false, false, false, false, false, false, false, false, false, false, false,
+            false, false, false, false };
 
     cnst1.setFieldName( fieldName1 );
     cnst1.setFieldType( type1 );
